My name added and testing

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     </head>
     
     <body>
-        
+        <h1>Dave Fonorow</h1>
+        <h2>Data Analytics and Software Development</h2>
+        <img src="place">
     </body>
 </html>
