--- a/pages/contact_info.html
+++ b/pages/contact_info.html
@@ -4,12 +4,37 @@
 <head>
 
   <meta charset="UTF-8">
-  <title>Fonorow Contact info</title>
+  <title>Fonorow Contact Info</title>
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
   <link rel="stylesheet" href="style.css">
 </head>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="#">Navbar</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="https://silveris.github.io/">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="pages/contact_info.html">Contact Info</a>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Projects
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="#">Test</a>
+        </div>
+      </li>
+    </ul>
+  </div>
+</nav>
 <body>
     <div class='container'>
         <div class='row'>
@@ -26,8 +51,8 @@
         </div>
         <div class='row'>
             <div class='col-md-4'>
-            <h3>Dave Fonorow</h3>
-            <p>Contact info</p>
+            <h3></h3>
+            <p></p>
             </div>
         </div>
     </div>
