--- a/pages/contact_info.html
+++ b/pages/contact_info.html
@@ -11,7 +11,6 @@
   <link rel="stylesheet" href="style.css">
 </head>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Navbar</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -22,14 +21,14 @@
         <a class="nav-link" href="https://silveris.github.io/">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="pages/contact_info.html">Contact Info</a>
+        <a class="nav-link" href="contact_info.html">Contact Info</a>
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Projects
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Test</a>
+          <a class="dropdown-item" href="pages/project_pages/weather_project.html">Weather Data Project</a>
         </div>
       </li>
     </ul>
